feat: Finished 'Comment' CRUD